--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-nuxt-layer",
+  "name": "nuxt-layer-irod-test",
   "type": "module",
   "version": "0.0.1",
   "main": "./nuxt.config.ts",
@@ -16,5 +16,12 @@
     "eslint": "^8.28.0",
     "nuxt": "^3.6.2",
     "typescript": "^4.9.3"
+  },
+  "overrides": {
+    "vue": "latest"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.6"
   }
 }
